# wb-review-analyzer

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  build-docker.bat  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: endpoints.py  schemas.py
app/core/: config.py
app/models/: aspect_analyzer.py  sentiment_model.py
data/: wildberries_reviews.csv
models/onnx_model_s/: model.onnx
models/pytorch_model/: config.json  model.safetensors
notebooks/: model_training.py
scripts/: model_training.py
